Atualização de index

--- a/index.html
+++ b/index.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOGWARTS</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
-</head>
-<header>
-        <div class="container">
-            <h1 class="logo"><img src="assets/img/logo.png" alt="" width="150px"></h1>
-            <ul class="navbar">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Matérias</a></li>
-                <li><a href="#">Matrícula</a></li>
-                <li><a href="#">Login</a></li>
-        
-           </ul>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+  </head>
+  <header>
+    <div class="container">
+      <h1 class="logo">
+        <img src="assets/img/logo.png" alt="" width="150px" />
+      </h1>
+      <ul class="navbar">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Matérias</a></li>
+        <li><a href="#">Matrícula</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
     </div>
-
-</header>
-<body>
-
+  </header>
+  <body>
     <div class="banner">
-
-        <div class="container">
-            <p class="tamanho-conteudo">Preservando <span>hoje</span> para existir <span>amanhã</span>.</p>
+      <div class="container">
+        <div id="botao">
+          <button>SAIBA MAIS</button>
+          <!-- <p class="tamanho-conteudo">Preservando <span>hoje</span> para existir <span>amanhã</span>.</p> -->
         </div>
+      </div>
     </div>
-</body>
 
+    <div id="txt_sobre">
+        <h1>QUEM SOMOS</h1>
+        <span>
+      Fundada no século X, pelos bruxos Godric Grifinória, Helga
+      Lufa-Lufa, Salazar Sonserina e Rowena Corvinal. Localizada na Escócia, 
+      a Escola de Magia e Bruxaria de Hogwarts é a responsável por
+      formar alguns dos bruxos mais memoráveis. As inscrições podem ser realizadas
+      ao completar 11 anos por nascidos bruxo, mestiços ou trouxas(sem conhecimento de magia).
+      A pré inscrição é feita online e a aprovação final é informada através de corujas.
+      As primeiras matérias são disponibilizadas online para que o(a) aluno(a) pratique antes
+      do ano letivo começar.</span>
+    </div>
+
+    <div id="txt_materias">
+        <h1>GRADE CURRICULAR</h1>
+
+        <span>
+      A grade curricular de Hogwarts é extensa, incluindo disciplinas
+      obrigatórias, opcionais e extracurriculares, além de aulas voltadas para
+      as artes. Entre os estudos obrigatórios estão: Defesa Contra as Artes das
+      Trevas, Feitiços, Transfiguração, Poções, Herbologia, História da Magia,
+      Astronomia e Duelos. As disciplinas opcionais são: Adivinhação, Estudo de
+      Runas Antigas, Aritmancia, Estudo dos Trouxas e Trato das Criaturas
+      Mágicas. As matérias extracurriculares são: Alquimia, Aparatação, Estudos
+      Avançados em Aritmancia e Estudos Antigos. Por fim, há as disciplinas
+      ligadas à arte, como Voo, Orquestra de Hogwarts, Arte Trouxa, Música,
+      Música Trouxa e Xilomancia.</span>
+
+      
+    </div>
+  </body>
 </html>
