--- a/index.html
+++ b/index.html
@@ -70,7 +70,27 @@
 </div>
     </div>
 
-<div id="galeria">
+    <div id="titulo">  <h1> NOSSA GALERIA</h1></div>
+<div class="galeria">
+
+  <figure class="item_da_galeria galeria_item--1">
+    <img src="assets/img/dobby_1.jpg" class="img_galeria" alt="Imagem1">
+  </figure>
+  <figure class="item_da_galeria galeria_item--2">
+    <img src="assets/img/corredores_2.jpg" class="img_galeria" alt="Imagem2">
+  </figure>
+  <figure class="item_da_galeria galeria_item--3">
+    <img src="assets/img/corredores_3.jpg" class="img_galeria" alt="Imagem3">
+  </figure>
+  <figure class="item_da_galeria galeria_item--4">
+    <img src="assets/img/hogwarts_4.jfif" class="img_galeria" alt="Imagem4">
+  </figure>
+  <figure class="item_da_galeria galeria_item--5">
+    <img src="assets/img/trasgo_5.jpg" class="img_galeria" alt="Imagem5">
+  </figure>
+  <figure class="item_da_galeria galeria_item--6">
+    <img src="assets/img/jantar_6.jpg" class="img_galeria" alt="Imagem6">
+  </figure>
 
 </div>
   </body>
@@ -78,14 +98,16 @@
   <footer>
 
     <div id="container_rodape">
+ 
     <div id="logo_rodape">
 
       <img src="/assets/img/logo.png" alt="Logo rodapé" width="150px">
 
     </div>
+
     <div id="informacoes_rodape">
 
-      
+      <p>VIVA A MAGIA ♥ </p>
 
     </div>
 </div>
