--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Matérias</a></li>
         <li><a href="#">Matrícula</a></li>
-        <button id="entrar">Login</li>
+        <button id="entrar" onclick="cadastro.html">Login</li>
         </button>
       </ul>
 
@@ -27,7 +27,7 @@
     <div class="banner">
       <div class="container">
         <div id="botao">
-          <button id="botao1">INSCREVA-SE</button>
+          <button id="botao1" onclick="cadastro.html"> INSCREVA-SE</button>
         </div>
       </div>
     </div>
