adicionando pagina de login e cadastro em andamento

--- a/login.html
+++ b/login.html
@@ -26,11 +26,23 @@
 
     <div class="caixaExterna">
         <div class="areaFormulario">
-          <h1>Faça sua matricula<br> E viva com magia.</h1>
+          <h1>Olá aluno,<br> Entre em Hogsciber.</h1>
         </div>
 
         <div class="areaImagem">
+            <div class="cardLogin">
+                <h1>LOGIN</h1>
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" id="login" placeholder="Usuário"><br>
+                </div>
+                <div class="textfield">
+                    <label for="usuario">Senha</label>
+                    <input type="password" id="login" placeholder="Senha"><br>
+                </div>
+                <button class="botaoAcesso">ENTRAR</button>
 
+            </div>
         </div>
     </div>
     
