--- a/login.html
+++ b/login.html
@@ -13,20 +13,21 @@
         <img src="assets/img/logo.png" alt="" width="150px" />
       </h1>
       <ul class="navbar">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Matérias</a></li>
-        <li><a href="#">Matrícula</a></li>
-        <button id="entrar">Login</li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#txt_sobre">Sobre</a></li>
+        <li><a href="#txt_materias">Matérias</a></li>
+        <li><a href="/cadastro.html">Matrícula</a></li>
+        <li><a href="/login.html">Login</a></li>
         </button>
       </ul>
-    </div>
+        </div>
   </header>
 <body>
 
     <div class="caixaExterna">
         <div class="areaFormulario">
           <h1>Olá aluno,<br> Entre em Hogsciber.</h1>
+          <img src="assets/img/varinha_login.png" id="imgLogin" alt="">
         </div>
 
         <div class="areaImagem">
