--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <img src="assets/img/logo.png" alt="" width="150px" />
       </h1>
       <ul class="navbar">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Matérias</a></li>
-        <li><a href="#">Matrícula</a></li>
-        <button id="entrar" onclick="cadastro.html">Login</li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#txt_sobre">Sobre</a></li>
+        <li><a href="#txt_materias">Matérias</a></li>
+        <li><a href="/cadastro.html">Matrícula</a></li>
+        <li><a href="/login.html">Login</a></li>
         </button>
       </ul>
 
