Organização da API no projeto, reorganização de documentos, inclusão de código no CSS

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOGWARTS</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <header>
     <div class="container">
@@ -13,11 +13,11 @@
         <img src="assets/img/logo.png" alt="" width="150px" />
       </h1>
       <ul class="navbar">
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#txt_sobre">Sobre</a></li>
         <li><a href="#txt_materias">Matérias</a></li>
-        <li><a href="/cadastro.html">Matrícula</a></li>
-        <li><a href="/login.html">Login</a></li>
+        <li><a href="cadastro.html">Matrícula</a></li>
+        <li><a href="login.html">Login</a></li>
         </button>
       </ul>
 
@@ -107,7 +107,7 @@
 
     <div id="informacoes_rodape">
 
-      <p>VIVA A MAGIA ♥ </p>
+      <span>VIVA A MAGIA ♥ </span>
 
     </div>
 </div>
