--- a/site/public/login.html
+++ b/site/public/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Inscreva-se !</title>
 </head>
 <header>
@@ -13,11 +13,11 @@
         <img src="assets/img/logo.png" alt="" width="150px" />
       </h1>
       <ul class="navbar">
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#txt_sobre">Sobre</a></li>
         <li><a href="#txt_materias">Matérias</a></li>
-        <li><a href="/cadastro.html">Matrícula</a></li>
-        <li><a href="/login.html">Login</a></li>
+        <li><a href="cadastro.html">Matrícula</a></li>
+        <li><a href="login.html">Login</a></li>
         </button>
       </ul>
         </div>
@@ -32,13 +32,11 @@
 
         <div class="areaImagem">
             <div class="cardLogin">
-                <h1>LOGIN</h1>
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
                     <input type="text" id="login" placeholder="Usuário"><br>
                 </div>
                 <div class="textfield">
-                    <label for="usuario">Senha</label>
                     <input type="password" id="login" placeholder="Senha"><br>
                 </div>
                 <button class="botaoAcesso">ENTRAR</button>
