--- a/site/public/index.html
+++ b/site/public/index.html
@@ -93,6 +93,24 @@
   </figure>
 
 </div>
+
+<div class="caixaExterna">
+  
+  <div class="areaFormulario">
+    <h1>Se identificou conosco?<br> Então faça seu teste de casas.</h1>
+    <img src="assets/img/chapeu_seletor.gif" id="imgLogin" alt="">
+  </div>
+
+  <div class="areaImagem">
+      <div class="cardChapeu">
+         <a href="testeDeCasa.html"> <button class="botaoChapeu">COLOCAR O CHAPÉU</button></a>
+
+      </div>
+  </div>
+</div>
+
+
+
   </body>
 
   <footer>
@@ -101,7 +119,7 @@
  
     <div id="logo_rodape">
 
-      <img src="/assets/img/logo.png" alt="Logo rodapé" width="150px">
+      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
 
     </div>
 
