--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -27,6 +27,8 @@
     <div class="caixaExterna">
         <div class="areaFormulario">
           <h1>Bem vindo,<br> Se inscreva e viva de magia.</h1>
+          <h4>Se increva apenas após realizar o teste de casas. <br>
+          Caso ainda não tenha realizado, realize agora, clicando aqui. </h4>
           <img src="assets/img/varinha_login.png" id="imgLogin" alt="">
         </div>
 
@@ -34,9 +36,19 @@
             <div class="cardLogin">
                 <h1>LOGIN</h1>
                 <div class="textfield">
-                    <label for="usuario">Nome do Aluno</label>
-                    <input type="text" id="user" placeholder="Nome completo"><br>
+                    <label for="usuario">Primeiro nome</label>
+                    <input type="text" id="user" placeholder="Primeiro nome"><br>
                 </div>
+                <div class="textfield">
+                  <label for="usuario">Sobrenome</label>
+                  <input type="text" id="user" placeholder="Último Sobrenome"><br>
+              </div>
+
+                <div class="textfield">
+                  <label for="usuario">Nickname</label>
+                  <input type="text" id="user" placeholder="Mostre como gostaria de ser chamado"><br>
+              </div>
+
                 <div class="textfield">
                     <label for="usuario">Data de Nascimento</label>
                     <input type="date" id="dtNasc" placeholder="Data de nascimento"><br>
@@ -52,7 +64,7 @@
                               </div>
 
               <div class="textfield">
-                <label for="usuario">Casa de Preferencia</label>
+                <label for="usuario">Casa pertencente. </label>
                 <select id="casaCheck">
                   <option value="1">Grifinória</option>
                   <option value="2">Lufa-Lufa</option>
@@ -72,4 +84,22 @@
     </div>
     
 </body>
+<footer>
+
+  <div id="container_rodape">
+
+  <div id="logo_rodape">
+
+    <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+
+  </div>
+
+  <div id="informacoes_rodape">
+
+    <span>VIVA A MAGIA ♥ </span>
+
+  </div>
+</div>
+</footer>
+
 </html>
