--- a/site/public/login.html
+++ b/site/public/login.html
@@ -33,7 +33,6 @@
         <div class="areaImagem">
             <div class="cardLogin">
                 <div class="textfield">
-                    <label for="usuario">Usuário</label>
                     <input type="text" id="login" placeholder="Usuário"><br>
                 </div>
                 <div class="textfield">
@@ -46,4 +45,22 @@
     </div>
     
 </body>
+<footer>
+
+  <div id="container_rodape">
+
+  <div id="logo_rodape">
+
+    <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+
+  </div>
+
+  <div id="informacoes_rodape">
+
+    <span>VIVA A MAGIA ♥ </span>
+
+  </div>
+</div>
+</footer>
+
 </html>
