--- a/site/public/login.html
+++ b/site/public/login.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <title>Inscreva-se !</title>
 </head>
 <header>
@@ -33,12 +35,12 @@
         <div class="areaImagem">
             <div class="cardLogin">
                 <div class="textfield">
-                    <input type="text" id="login" placeholder="Usuário"><br>
+                    <input type="text" id="login_input" placeholder="Usuário"><br>
                 </div>
                 <div class="textfield">
-                    <input type="password" id="login" placeholder="Senha"><br>
+                    <input type="password" id="senha_input" placeholder="Senha"><br>
                 </div>
-                <button class="botaoAcesso">ENTRAR</button>
+                <button onclick="entrar()" class="botaoAcesso">ENTRAR</button>
 
             </div>
         </div>
@@ -64,3 +66,76 @@
 </footer>
 
 </html>
+<script>
+
+  function entrar() {
+
+
+      var nomeVar = login_input.value;
+      var senhaVar = senha_input.value;
+
+      if (nomeVar == "" || senhaVar == "") {
+          // cardErro.style.display = "block"
+          swal("Ops", "Preencha os campos para logar 😠!", "error")
+          finalizarAguardar();
+          return false;
+      }
+      else {
+          swal("Parábens", "Login realizado com sucesso redirecionando a tela do quiz 😄se divirta...!", "success");
+          setInterval('...', 2000)
+
+
+          console.log("FORM LOGIN: ", nomeVar);
+          console.log("FORM SENHA: ", senhaVar);
+
+          fetch("/usuarios/autenticar", {
+              method: "POST",
+              headers: {
+                  "Content-Type": "application/json"
+              },
+              body: JSON.stringify({
+                nomeServer: nomeVar,
+                  senhaServer: senhaVar
+              })
+          }).then(function (resposta) {
+              console.log("ESTOU NO THEN DO entrar()!")
+
+              if (resposta.ok) {
+                  console.log(resposta);
+
+                  resposta.json().then(json => {
+                      console.log(json);
+                      console.log(JSON.stringify(json));
+
+                      sessionStorage.EMAIL_USUARIO = json.email;
+                      sessionStorage.NOME_USUARIO = json.nome;
+                      sessionStorage.ID_USUARIO = json.idUsuario;
+
+                      setTimeout(function () {
+                          window.location = "index.html";
+                      }, 3000); // apenas para exibir o loading
+
+                  });
+
+              } else {
+
+                  swal("Ops", "Email e/ou senha inválido(s)", "error")
+
+                  resposta.text().then(texto => {
+                      console.error(texto);
+                      finalizarAguardar(texto);
+                  });
+              }
+
+          }).catch(function (erro) {
+              console.log(erro);
+          })
+
+          return false;
+      }
+
+      //function sumirMensagem() {
+      //  cardErro.style.display = "none"
+      // } 
+  }  
+</script>
