alteração de imagens

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -27,17 +27,17 @@
   </header>
 <body>
 
-    <div class="caixaExterna">
-        <div class="areaFormulario">
+    <div class="caixaExternaCadastro">
+        <div class="areaFormularioCadastro">
           <h1>Bem vindo,<br> Se inscreva e viva de magia.</h1>
           <h4>Se increva apenas após realizar o teste de casas. <br>
           Caso ainda não tenha realizado, realize agora, clicando aqui. </h4>
-          <img src="assets/img/varinha_login.png" id="imgLogin" alt="">
+          <img src="assets/img/pena_cadastro.png" id="imgLogin" alt="">
         </div>
 
-        <div class="areaImagem">
-            <div class="cardLogin">
-                <h1>LOGIN</h1>
+        <div class="areaImagemCadastro">
+            <div class="cardLoginCadastro">
+                <h1>MATRICULE-SE</h1>
                 <div class="textfield">
                     <label for="usuario">Primeiro nome</label>
                     <input type="text" id="user_input" placeholder="Primeiro nome"><br>
