--- a/site/public/login.html
+++ b/site/public/login.html
@@ -29,11 +29,12 @@
     <div class="caixaExterna">
         <div class="areaFormulario">
           <h1>Olá aluno,<br> Entre em Hogsciber.</h1>
-          <img src="assets/img/varinha_login.png" id="imgLogin" alt="">
+          <img src="assets/img/imagem_login.png" id="imgLogin" alt="">
         </div>
 
         <div class="areaImagem">
             <div class="cardLogin">
+                <h1>Área de LOGIN</h1>
                 <div class="textfield">
                     <input type="text" id="login_input" placeholder="Usuário"><br>
                 </div>
