--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <h1 class="logo">
-        <img src="assets/img/logo.png" alt="" width="150px" />
+       <a href="index.html"><img src="assets/img/logo.png" alt="" width="150px" /></a>
       </h1>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
