--- a/site/public/login.html
+++ b/site/public/login.html
@@ -12,8 +12,8 @@
 <header>
     <div class="container">
       <h1 class="logo">
-        <img src="assets/img/logo.png" alt="" width="150px" />
-      </h1>
+        <a href="index.html"><img src="assets/img/logo.png" alt="" width="150px" /></a>
+    </h1>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
         <li><a href="#txt_sobre">Sobre</a></li>
