atualizacao de navbar

--- a/site/public/dashboard/sonserina/estudos.html
+++ b/site/public/dashboard/sonserina/estudos.html
@@ -15,11 +15,11 @@
             <a href="index.html"><img src="assets/img/logo.png" alt="" width="150px" /></a>
         </h1>
         <ul class="navbar">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="#"> </a></li>
             <li><a href="#"> </a></li>
-            <li><a href="#txt_sobre">Sala Comunal</a></li>
-            <li><a href="#txt_materias">Estudos</a></li>
+            <li><a href="salaComunal.html">Sala Comunal</a></li>
+            <li><a href="estudos.html">Estudos</a></li>
             </button>
         </ul>
 
