--- a/site/public/dashboard/sonserina/estudos.html
+++ b/site/public/dashboard/sonserina/estudos.html
@@ -12,15 +12,18 @@
 <header>
     <div class="container">
         <h1 class="logo">
-            <a href="index.html"><img src="assets/img/logo.png" alt="" width="150px" /></a>
+            <a href="index.html"><img src="../../assets/icons/logo_sonserina.png" alt="" width="100px" /></a>
         </h1>
         <ul class="navbar">
             <li><a href="../../index.html">Home</a></li>
             <li><a href="#"> </a></li>
             <li><a href="#"> </a></li>
             <li><a href="salaComunal.html">Sala Comunal</a></li>
-            <li><a href="estudos.html">Estudos</a></li>
-            </button>
+            <li class="agora"><a href="estudos.html">Estudos</a></li>
+            <div class="btn-logout" onclick="limparSessao()">
+                <h3>Sair</h3>
+            </div>
+
         </ul>
 
     </div>
