--- a/site/public/index.html
+++ b/site/public/index.html
@@ -13,16 +13,18 @@
        <a href="index.html"><img src="assets/img/logo.png" alt="" width="150px" /></a>
       </h1>
       <ul class="navbar">
-        <li><a href="index.html">Home</a></li>
+        <li class="agora"><a href="index.html">Home</a></li>
         <li><a href="#txt_sobre">Sobre</a></li>
         <li><a href="#txt_materias">Matérias</a></li>
         <li><a href="cadastro.html">Matrícula</a></li>
-        <li><a href="login.html">Login</a></li>
+        <div class="btn-logout"><a href="login.html">Login</a></div>
         </button>
       </ul>
-
-    </div>
+      </div>
   </header>
+
+
+
   <body>
     <div class="banner">
       <div class="container">
