Ajustes de dashboard

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -75,12 +75,14 @@
                   <option value="3">Sonserina</option>
               </select>
                           </div>
+</div>
+                          
             <div class="textfield">
               <label for="usuario">Senha</label>
               <input type="password" id="senha_input" placeholder="Senha"><br>
           </div>
 
-                <button onclick="cadastrar()" class="botaoAcesso">ENTRAR</button>
+                <button onclick="cadastrar()" class="botaoAcesso">MATRICULAR</button>
 
             </div>
         </div>
