--- a/site/public/dashboard/sonserina/estudos.html
+++ b/site/public/dashboard/sonserina/estudos.html
@@ -12,7 +12,7 @@
 <header>
     <div class="container">
         <h1 class="logo">
-            <a href="index.html"><img src="../../assets/icons/logo_sonserina.png" alt="" width="100px" /></a>
+            <a href="../../index.html"><img src="../../assets/icons/logo_sonserina.png" alt="" width="100px" /></a>
         </h1>
         <ul class="navbar">
             <li><a href="../../index.html">Home</a></li>
