--- a/site/public/login.html
+++ b/site/public/login.html
@@ -108,8 +108,8 @@
                       console.log(json);
                       console.log(JSON.stringify(json));
 
-                      sessionStorage.EMAIL_USUARIO = json.email;
                       sessionStorage.NOME_USUARIO = json.nome;
+                      sessionStorage.CASA_USUARIO = json.nome;
                       sessionStorage.ID_USUARIO = json.idUsuario;
 
                       setTimeout(function () {
