--- a/site/public/login.html
+++ b/site/public/login.html
@@ -77,7 +77,7 @@
 
       if (nicknameVar == "" || senhaVar == "") {
           // cardErro.style.display = "block"
-          swal("Ops", "Preencha os campos para logar 😠!", "error")
+          swal("Ops", "Opa bruxo, preencha os campos para logar 😠!", "error")
           finalizarAguardar();
           return false;
       }
