Atualização de dashboard

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -108,8 +108,7 @@
                       console.log(json);
                       console.log(JSON.stringify(json));
 
-                      sessionStorage.NOME_USUARIO = json.nome;
-                      sessionStorage.CASA_USUARIO = json.nome;
+                      sessionStorage.NOME_USUARIO = json.primeiroNome;
                       sessionStorage.ID_USUARIO = json.idUsuario;
 
                       setTimeout(function () {
