Atualização de dashboard

--- a/site/public/dashboard/sonserina/salaComunal.html
+++ b/site/public/dashboard/sonserina/salaComunal.html
@@ -42,12 +42,19 @@
 
     <div id="content">
             <div class="slide-show select-disable">
-                <h2>Casa favoritos</h2>
+                <h2>Curiosidades</h2>
                 <ul class="slides-list">
                     <li class="slide">
                         <canvas id="myChart"></canvas>
                     </li>
                 </ul>
+
+                <ul class="slides-list">
+                    <li class="slide">
+                        <canvas id="myChart2"></canvas>
+                    </li>
+                </ul>
+
         </div>
 
     
@@ -107,7 +114,8 @@
                 {
                     yAxisID: 'y-totalorigem',
                     label: 'Origem doo bruxos da escola',
-                    backgroundColor: ['#FF1493', '#FFFF00', '#FF4500', '#00FF00', '#4B0082', '#0000FF', '#FFF','#ADD8e6','#FF007F','#008000'],
+                    backgroundColor: ['#A65A49', '#96D9D9','#011F26'],
+                    borderColor: '#000',
                     fill: true,
                     data: []
                 }
