--- a/site/public/dashboard/sonserina/salaComunal.html
+++ b/site/public/dashboard/sonserina/salaComunal.html
@@ -14,6 +14,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
         <script src="http://www.chartjs.org/dist/2.7.1/Chart.js"></script>
         <script src="http://www.chartjs.org/samples/latest/utils.js"></script>
+      
 
 </head>
 <header>
@@ -46,12 +47,6 @@
                 <ul class="slides-list">
                     <li class="slide">
                         <canvas id="myChart"></canvas>
-                    </li>
-                </ul>
-
-                <ul class="slides-list">
-                    <li class="slide">
-                        <canvas id="myChart2"></canvas>
                     </li>
                 </ul>
 
@@ -212,4 +207,6 @@
         }
 
     }
+
+// Criando estrutura para plotar gráfico - config
 </script> 
