Edição de gráficos

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -177,7 +177,7 @@
 
         if (resposta.ok) {
           //cardErro.style.display = "block";
-          swal("Parábens", "Matrícula realizado com sucesso redirecionando a tela de login 😄...!", "success");
+          swal("Parábens", "Matrícula realizado com sucesso, agora é só fazer login ...!", "success");
 
 
           setTimeout(() => {
