--- a/site/public/testeDeCasas/testeDeCasa.html
+++ b/site/public/testeDeCasas/testeDeCasa.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Inscreva-se !</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="styleQuiz.css">
+    <title>CHAPÉU SELETOR</title>
 </head>
 <header>
     
     <div class="container">
         <h1 class="logo">
-            <a href="index.html"><img src="assets/img/logo.png" alt="" width="150px" /></a>
+            <a href="index.html"><img src="../assets/img/logo.png" alt="" width="150px" /></a>
         </h1>
         <ul class="navbar">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#txt_sobre">Sobre</a></li>
-            <li><a href="#txt_materias">Matérias</a></li>
-            <li><a href="cadastro.html">Matrícula</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Sobre</a></li>
+            <li><a href="../index.html">Matérias</a></li>
+            <li><a href="../cadastro.html">Matrícula</a></li>
+            <li><a href="../index.html">Login</a></li>
             </button>
         </ul>
     </div>
@@ -36,7 +37,7 @@
             <div class="cards">
 
                 <figure>
-                    <img src="../public/assets/img/logo_grifinoria.png" alt="logo_grifinoria" width="100vw">
+                    <img src="../assets/img/logo_grifinoria.png" alt="logo_grifinoria" width="100vw">
                 </figure>
 
                 <h4><span class="subtitulo">Grifinória</span></h4>
@@ -54,7 +55,7 @@
             <div class="cards">
 
                 <figure>
-                    <img src="../public/assets/img/logo_lufalufa.png" alt="logo_lufalufa" width="100vw">
+                    <img src="../assets/img/logo_lufalufa.png" alt="logo_lufalufa" width="100vw">
                 </figure>
 
 
@@ -71,7 +72,7 @@
             <div class="cards">
 
                 <figure>
-                    <img src="../public/assets/img/logo_sonserina.png" alt="logo_sonserina" width="100vw">
+                    <img src="../assets/img/logo_sonserina.png" alt="logo_sonserina" width="100vw">
                 </figure>
 
 
@@ -88,7 +89,7 @@
             <div class="cards">
 
                 <figure>
-                    <img src="../public/assets/img/logo_corvinal.png" alt="logo_corvinal" width="115vw">
+                    <img src="../assets/img/logo_corvinal.png" alt="logo_corvinal" width="115vw">
                 </figure>
 
 
@@ -104,7 +105,7 @@
             </div>
 
         </div>
-        <button onclick="quiz()" id="botaoQuiz">INICIAR O TESTE</button>
+        <button id="botaoQuiz"><a href="quiz.html">COLOCAR O CHAPÉU</a></button>
 
     </div>
 
