--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -33,8 +33,9 @@
   <div class="caixaExternaCadastro">
     <div class="areaFormularioCadastro">
       <h1>Bem vindo,<br> Se inscreva e viva de magia.</h1>
+      
       <h4>Se increva apenas após realizar o teste de casas. <br>
-        Caso ainda não tenha realizado, realize agora, clicando aqui. </h4>
+        Caso ainda não tenha realizado, realize agora, <a href="testeDeCasas/quiz.html"> clicando aqui.</a> </h4>
       <img src="assets/img/pena_cadastro.png" id="imgLogin" alt="">
     </div>
 
