--- a/site/public/index.html
+++ b/site/public/index.html
@@ -105,7 +105,7 @@
 
   <div class="areaImagem">
       <div class="cardChapeu">
-         <a href="testeDeCasa.html"> <button class="botaoChapeu">COLOCAR O CHAPÉU</button></a>
+         <a href="testeDeCasas/testeDeCasa.html"> <button class="botaoChapeu">COLOCAR O CHAPÉU</button></a>
 
       </div>
   </div>
