--- a/site/public/dashboard/sonserina/salaComunal.html
+++ b/site/public/dashboard/sonserina/salaComunal.html
@@ -40,9 +40,17 @@
         <h3>Saudações, <span id="b_usuario">usuário</span>, da casa <span id="b_casa">SONSERINA</span>!</h3>
     </div>
 
+    <span>Agora você é definitivamente um aluno. Está preparado para viver a magia?</span>
+    <span>Saiba algumas curiosidades sobre a escola</span>
+
+    <div id="titulosGraficos">
+        <div id="esquerda"><h2>Saiba quais as origens dos bruxos desta escola</h2></div>
+        <div id="direita"><h2>Quantidade de alunos em cada casa</h2></div>
+    </div>
+
     <div id="content">
         <div class="slide-show select-disable">
-            <h2>Curiosidades</h2>
+  
             <ul class="slides-list">
                 <li class="slide">
                     <canvas id="myChart"></canvas>
@@ -53,7 +61,6 @@
 
         <div id="content">
             <div class="slide-show select-disable">
-                <h2>Curiosidades</h2>
                 <ul class="slides-list">
                     <li class="slide2">
                         <canvas id="myChart2"></canvas>
@@ -61,9 +68,6 @@
                 </ul>
 
             </div>
-
-
-
 
 
 </body>
@@ -139,18 +143,13 @@ let labels = [];
 let dados = {
     labels: labels,
     datasets: [{
-        label: 'voto',
+        label: 'Quantidade de alunos por casa',
         data: [],
-        fill: false,
-        backgroundColor: ['#A65A49', '#96D9D9', '#011F26','#ff4550'],
+        fill: true,
+        backgroundColor: ['#A65A49', '#96D9D9', '#011F26','#A65A49'],
+        borderColor: '#000',
         tension: 0.1
-    },
-    {
-        label: 'Temperatura',
-        data: [],
-        fill: false,
-        backgroundColor: ['#A65A49', '#96D9D9', '#011F26','#ff4550'],
-        tension: 0.1
+        
     }]
 };
 
@@ -229,7 +228,6 @@ let myChart = new Chart(
                 stacked: false,
                 title: {
                     display: true,
-                    text: 'Origem dos bruxos da escola'
                 },
 
                 scales: {
@@ -240,7 +238,7 @@ let myChart = new Chart(
                         id: 'y-totalorigem',
                         ticks: {
                             beginAtZero: true,
-                            max: 50,
+                            max: 32,
                             min: 0
                         }
                     }, {
@@ -256,7 +254,7 @@ let myChart = new Chart(
 
         //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
         //     Para ajustar o "select", ajuste o comando sql em src/models
-        function atualizarGrafico(idOrigem, dados) {
+        function atualizarGrafico(dados) {
 
             fetch(`/medidas/tempo-real/${idOrigem}`, { cache: 'no-store' }).then(function (response) {
                 if (response.ok) {
